--- a/package.json
+++ b/package.json
@@ -14,17 +14,29 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-checkbox": "^1.3.2",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
     "@tanstack/react-query": "^5.17.9",
     "@tanstack/react-query-devtools": "^5.17.9",
     "axios": "^1.6.5",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "eslint-import-resolver-alias": "^1.1.2",
     "i18next": "^23.7.16",
+    "lucide-react": "^0.534.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
     "react-i18next": "^14.0.0",
     "react-router-dom": "^6.21.1",
     "react-toastify": "^9.1.3",
+    "recharts": "^3.1.0",
+    "tailwind-merge": "^3.3.1",
     "yup": "^1.3.3"
   },
   "devDependencies": {
@@ -50,6 +62,7 @@
     "prettier-plugin-tailwindcss": "^0.6.14",
     "sass": "^1.69.7",
     "tailwindcss": "^4.1.11",
+    "tw-animate-css": "^1.3.6",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
   }
